# unit2nix

./: .gitignore  Cargo.toml  LICENSE  README.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  flake.nix
.agent/: napkin.md  writing-style.md
.tmp/nix-shell.9MW9PD/tmp.Wj5fxmQCqI/: plan-members.json
.tmp/nix-shell.F2ry6r/tmp.zRMUrht0Ot/: plan-basic.json  plan.json
benches/: bench.sh  buildRustPackage.nix  crane.nix  crate2nix-Cargo.nix  crate2nix-build-from-json.nix  crate2nix-json-hashes.json  crate2nix-json.json  unit2nix-package.nix
docs/: proposal-default-output.md  sys-crate-overrides.md
flake-modules/: default.nix
lib/: auto.nix  build-from-unit-graph.nix  crate-overrides.nix  fetch-source.nix  plugin.nix  vendor.nix
nix/: checks.nix  devshell.nix  overlay.nix  package.nix  plugin.nix
openspec/changes/flake-template-staleness-validation/: design.md  proposal.md  tasks.md
openspec/changes/nix-build-consumer/: design.md  tasks.md
openspec/specs/auto-build/: spec.md
openspec/specs/builtin-overrides/: spec.md
openspec/specs/cargo-subcommand/: spec.md
openspec/specs/cargo-vendor/: spec.md
openspec/specs/cross-compilation-validation/: spec.md
openspec/specs/flake-template/: spec.md
openspec/specs/nix-consumer/: spec.md
openspec/specs/override-diagnostics/: spec.md
openspec/specs/real-world-validation/: spec.md
openspec/specs/sample-workspace/: spec.md
openspec/specs/staleness-check/: spec.md
openspec/specs/update-plan-app/: spec.md
openspec/specs/workspace-test-attrs/: spec.md
plugin/: CMakeLists.txt  plugin.cc
sample_workspace/: Cargo.toml  build-plan.json
sample_workspace/sample-bin/: Cargo.toml
sample_workspace/sample-bin/src/: main.rs
sample_workspace/sample-bin/tests/: smoke.rs
sample_workspace/sample-build-script/: Cargo.toml  build.rs
sample_workspace/sample-build-script/src/: lib.rs
sample_workspace/sample-lib/: Cargo.toml
sample_workspace/sample-lib/src/: lib.rs
sample_workspace/sample-macro/: Cargo.toml
sample_workspace/sample-macro/src/: lib.rs
sample_workspace/sample-macro/tests/: smoke.rs
src/: cargo.rs  cargo_main.rs  cli.rs  ffi.rs  fingerprint.rs  lib.rs  main.rs  merge.rs  metadata.rs  output.rs  overrides.rs  prefetch.rs  run.rs  source.rs  unit_graph.rs
templates/default/: flake.nix
tests/: cli.rs  cli_snapshots.rs
tests/bat/: build-plan.json  build.nix
tests/cross/: build.nix
tests/fd/: build-plan.json  build.nix
tests/flake-parts/: build.nix
tests/nushell/: build-plan.json  build.nix
tests/ripgrep/: build-plan.json  build.nix
tests/snapshots/: sample-workspace-members-plan.json  sample-workspace-overrides.json  sample-workspace-plan.json
tests/test-attrs-cycle/: Cargo.toml  build-plan.json  build.nix
tests/test-attrs-cycle/cycle-a/: Cargo.toml
tests/vm/: per-crate-caching.nix  rebuild-isolation.nix  sample-bin.nix
(+50 files in other folders)
