[package]
name = "unit2nix"
version = "0.1.0"
edition = "2021"
description = "Generate per-crate Nix build plans from Cargo's unit graph"
license = "MIT"
repository = "https://github.com/brittonr/unit2nix"
homepage = "https://github.com/brittonr/unit2nix"
readme = "README.md"
keywords = ["nix", "cargo", "build", "crate"]
categories = ["development-tools::build-utils"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
