[package]
name = "sample-lib"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
pretty_assertions = "1"
